[project]
name = "comfyui-checkpoint-config-loader"
description = "Provides a custom node to load config for sampler nodes from a yaml file."
version = "1.0.0"
license = { text = "GNU General Public License v3.0" }

[project.urls]
Repository = "https://github.com/Cyberschorsch/ComfyUI-checkpoint-config-loader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cyberschorsch"
DisplayName = "ComfyUI-checkpoint-config-loader"
Icon = ""
